--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,38 @@
+/**
+Dialog for add media (Picture or Video)
+ */
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    text-align: center;
+}
+
+.btnMedia {
+    margin: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.btnDelete {
+    margin: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+
 .error-message ul {
     background-color: lightcoral;
     list-style-type: none;
