--- a/templates/new/newForm.html.twig
+++ b/templates/new/newForm.html.twig
@@ -42,7 +42,7 @@
 </div>
 
 <!-- Box for add medias begin -->
-<div id="boxMedia" class="modal">
+<div id="boxMedia" class="modal d-none">
     <div class="modal-content">
         <div class="modal-body">
             <p>Choose an option:</p>
@@ -55,35 +55,3 @@
     </div>
 </div>
 <!-- Box for add medias ending -->
-
-<style>
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 50%;
-        text-align: center;
-    }
-
-    .btnMedia {
-        margin: 5px;
-        padding: 10px;
-        cursor: pointer;
-    }
-</style>
-
-
-
