--- a/templates/update/updateForm.html.twig
+++ b/templates/update/updateForm.html.twig
@@ -66,6 +66,7 @@
     </div>
     <!-- Submit form update figure ending -->
     <!-- Form for update figure ending -->
+    <!-- Form for update media begin -->
     {{ form_start(formMedia, { 'attr': {'id': 'editionFormMedia'} }) }}
     <div id="medias" class="mt-2 p-3" data-prototype="{{ form_widget(formMedia.medias.vars.prototype)|e('html_attr') }}">
         {% for item in formMedia.medias %}
@@ -76,12 +77,13 @@
     </div>
     {{ form_end(formMedia) }}
     <div class="d-flex flex-row-reverse mt-3 p-3">
-        <button id="btnEditMedia" type="submit" class="btn btn-warning" style="display: none">Add your medias</button>
+        <button id="btnEditMedia" type="submit" class="btn btn-warning d-none">Add your medias</button>
     </div>
+    <!-- Form for update media ending -->
 </div>
 
 <!-- Box for add medias begin -->
-<div id="boxMedia" class="modal">
+<div id="boxMedia" class="modal d-none">
     <div class="modal-content">
         <div class="modal-body">
             <p>Choose an option:</p>
@@ -94,32 +96,3 @@
     </div>
 </div>
 <!-- Box for add medias ending -->
-
-<style>
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 50%;
-        text-align: center;
-    }
-
-    .btnMedia {
-        margin: 5px;
-        padding: 10px;
-        cursor: pointer;
-    }
-</style>
