add method login and signup + begin setup in session activated

--- a/templates/details/comments.html.twig
+++ b/templates/details/comments.html.twig
@@ -1,22 +1,24 @@
 <section id="comments" class="bg-light">
-    <hr>
-    <h3 class="d-flex justify-content-center">Leave a comment</h3>
-    <!--Leave a comment begin -->
-    <div class="p-3 mx-auto d-flex justify-content-center" style="max-width: 1000px;">
-        <div class="form-group w-100">
-            <div class="col-md-8 w-100">
-                {{ form_start(formComment, { 'attr': { 'id': 'formCommentAnchor', 'class': 'd-flex align-items-center gap-1' } }) }}
-                <div class="mr-auto w-100">
-                    {{ form_row(formComment.content_comment) }}
+    {% if app.user %}
+        <hr>
+        <h3 class="d-flex justify-content-center">Leave a comment</h3>
+        <!--Leave a comment begin -->
+        <div class="p-3 mx-auto d-flex justify-content-center" style="max-width: 1000px;">
+            <div class="form-group w-100">
+                <div class="col-md-8 w-100">
+                    {{ form_start(formComment, { 'attr': { 'id': 'formCommentAnchor', 'class': 'd-flex align-items-center gap-1' } }) }}
+                    <div class="mr-auto w-100">
+                        {{ form_row(formComment.content_comment) }}
+                    </div>
+                    <button type="submit" class="btn btn-secondary">
+                        Send
+                    </button>
+                    {{ form_end(formComment) }}
                 </div>
-                <button type="submit" class="btn btn-secondary">
-                    Send
-                </button>
-                {{ form_end(formComment) }}
             </div>
         </div>
-    </div>
-    <!--Leave a comment ending -->
+        <!--Leave a comment ending -->
+    {% endif %}
     <hr>
     <!--List Comments begin -->
     <div id="listCommments" class="container mt-3 d-flex flex-column align-items-center">
