--- a/templates/layouts/nav.html.twig
+++ b/templates/layouts/nav.html.twig
@@ -10,30 +10,36 @@
                     <li class="nav-item">
                         <a class="navbar-brand" href="{{ path('app_home') }}">Home</a>
                     </li>
+                    {% if app.user %}
                     <li class="nav-item">
                         <p class="navbar-brand">|</p>
                     </li>
                     <li class="nav-item">
                         <a class="navbar-brand" href="{{ path('app_new') }}">Tricks</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <p class="navbar-brand">|</p>
                     </li>
-                    <li class="nav-item">
-                        <a class="navbar-brand" href="{{ path('app_login') }}">Sign in</a>
-                    </li>
-                    <li class="nav-item">
-                        <p class="navbar-brand">|</p>
-                    </li>
-                    <li class="nav-item">
-                        <a class="navbar-brand" href="#">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <p class="navbar-brand">|</p>
-                    </li>
-                    <li class="nav-item">
-                        <a class="navbar-brand" href="{{ path('app_login') }}">Logout</a>
-                    </li>
+                    {% if not app.user %}
+                        <li class="nav-item">
+                            <a class="navbar-brand" href="{{ path('app_login') }}">Sign in</a>
+                        </li>
+                        <li class="nav-item">
+                            <p class="navbar-brand">|</p>
+                        </li>
+                        <li class="nav-item">
+                            <a class="navbar-brand" href="{{ path('app_register') }}">Sign up</a>
+                        </li>
+                        <li class="nav-item">
+                            <p class="navbar-brand">|</p>
+                        </li>
+                    {% endif %}
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="navbar-brand" href="{{ path('app_logout') }}">Logout</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
