--- a/templates/update/updateForm.html.twig
+++ b/templates/update/updateForm.html.twig
@@ -5,7 +5,7 @@
     {{ form_row(formUpdate._token) }}
     <div class="form-group p-3">
         {{ form_label(formUpdate.title) }}
-        <div class="text-danger fw-bold rounded">
+        <div class="text-white error-message fw-bold rounded">
             {{ form_errors(formUpdate.title) }}
         </div>
         {{ form_widget(formUpdate.title) }}
