--- a/templates/security/reset_password_email.html.twig
+++ b/templates/security/reset_password_email.html.twig
@@ -1,9 +1,20 @@
-<p>
-    Hello !
-</p>
-<p>
-    In order to reset your password, please click on the following link:
-    <a href="{{ url|raw }}">
-        {{ url|raw }}
-    </a>
-</p>
+<!DOCTYPE html>
+<html lang="">
+<head>
+    <meta charset="UTF-8">
+    <title>Password reset email</title>
+</head>
+    <body>
+        <h1>Hello {{ user.pseudo }},</h1>
+
+        <p>We received a password reset request for your account.</p>
+
+        <p>If you have not made this request, ignore this email. Alternatively, you can reset your password using the link below:</p>
+
+        <p><a href="{{ url }}">{{ url }}</a></p>
+
+        <p>Thank you</p>
+
+        <p>Snowtricks Team</p>
+    </body>
+</html>
