--- a/templates/layouts/nav.html.twig
+++ b/templates/layouts/nav.html.twig
@@ -7,14 +7,14 @@
             </div>
             <div>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item d-flex">
                         <a class="navbar-brand" href="{{ path('app_home') }}">Home</a>
                     </li>
                     {% if app.user %}
                     <li class="nav-item">
                         <p class="navbar-brand">|</p>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-flex">
                         <a class="navbar-brand" href="{{ path('app_new') }}">Tricks</a>
                     </li>
                     {% endif %}
@@ -22,13 +22,13 @@
                         <p class="navbar-brand">|</p>
                     </li>
                     {% if not app.user %}
-                        <li class="nav-item">
+                        <li class="nav-item d-flex">
                             <a class="navbar-brand" href="{{ path('app_login') }}">Sign in</a>
                         </li>
                         <li class="nav-item">
                             <p class="navbar-brand">|</p>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-flex">
                             <a class="navbar-brand" href="{{ path('app_register') }}">Sign up</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +36,7 @@
                         </li>
                     {% endif %}
                     {% if app.user %}
-                        <li class="nav-item">
+                        <li class="nav-item d-flex">
                             <a class="navbar-brand" href="{{ path('app_logout') }}">Logout</a>
                         </li>
                         <li class="nav-item">
