--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -1,4 +1,4 @@
-<div class="container d-flex flex-column justify-content-center p-5 mt-5 w-50">
+<div class="blocFormMobile container d-flex flex-column justify-content-center p-5 mt-5">
     {{ form_start(profilForm, { 'attr': { 'id': 'editingFormProfil'} }) }}
     <h1 class="h3 mb-5 font-weight-normal text-center">
         Your profil
