--- a/templates/home/welcome.html.twig
+++ b/templates/home/welcome.html.twig
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div class="container mt-5" style="max-width: 1400px;">
-    <div class="bloc_cards" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px;"></div>
+    <div class="bloc_cards" style="display: grid; place-items: center; grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr)); gap: 40px;"></div>
     <div class="container d-flex align-items-center justify-content-center">
         <div id="flagEmptyData" class="container mt-5 p-5 text-center" style="display: none">
             <p>No figures are available</p>
@@ -32,7 +32,7 @@
         <div class="card-body d-flex align-items-center p-3" style="border: outset;">
             <div class="bloc_button-card m-auto">
                 <i class="fa-solid fa-spinner fa-spin-pulse fa-xl"></i>
-                Load more
+                <p class="d-none d-lg-block">Load more</p>
             </div>
         </div>
     </div>
