--- a/templates/security/new_password.html.twig
+++ b/templates/security/new_password.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="container d-flex justify-content-center flex-column p-5 mt-5">
         <h1 class="h3 mb-5 font-weight-normal text-center">New password</h1>
-        <div class="container mt-5 p-5 border w-50">
+        <div class="blocPassword container mt-5 p-5 border">
             {{ form_start(passForm) }}
             <div class="text-center mb-3">
                 {{ form_row(passForm.pseudo) }}
