--- a/templates/layouts/nav.html.twig
+++ b/templates/layouts/nav.html.twig
@@ -2,8 +2,8 @@
 <nav id="barNav" class="navbar navbar-expand-lg bg-info-subtle">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <div class="container border p-3 ms-0 w-auto">
-                Logo
+            <div class="container p-3 ms-0 w-auto">
+                <img src="{{ asset('favicon-32x32.png') }}" alt="logo">
             </div>
             <div>
                 <ul class="navbar-nav">
